--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
       <a href="#">Google Plus</a>
     </div>
 
-      <div class="white-wood">
-      <header>
+    <div class="white-wood">
+      <header class="medium-fade shadow">
         <div class="wrapper">
           <div id="logo">
             <h1>Exceptional</h1>
             <h2>Realty Group</h2>
           </div>
         </div><!-- .wrapper -->
-        <div id="navbar">
+        <div id="navbar" class="light-fade">
           <div class="wrapper">
             <nav>
-              <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+              <a class="selected" href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a>
             </nav>
           </div><!-- .wrapper -->
         </div><!-- #navbar -->
@@ -60,8 +60,9 @@
         </section>
 
       </div><!-- .wrapper -->
-    </div>
-    <section id="details">
+    </div><!-- .white-wood -->
+
+    <section id="details" class="medium-fade">
       <div class="wrapper clearfix">
         <div class="col-1 first border-right">
           <h3>Contact</h3>
@@ -72,7 +73,7 @@
           <h3>Correspondence</h3>
           <address>
             Exceptional Realty<br>
-            P.O. Box 5555<br>
+            P.O.Box 5555<br>
             Brooklyn, NY 11201
           </address>
         </div>
@@ -81,7 +82,7 @@
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
-            <a href="#" target="_blank">Affordable Mortgages</a><br>
+            <a href="#" target="_blank">Afordable Mortgages</a><br>
             <a href="#" target="_blank">Professional Moving Crew</a>
           </p>
         </div>
@@ -89,7 +90,7 @@
         <div class="col-1">
           <h3>Follow</h3>
           <p>
-            <a href="#" target="_blank">YouTube</a><br>
+            <a href="#" target="_blank">Youtube</a><br>
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
